Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -151,13 +151,13 @@ footer {
 @media print, screen and (max-width: 480px) {
 	body {
 		margin: 0;
+		}
 		background-size: 95%;
 		background-image: url("{{ site.baseurl }}/assets/img/largescrollmiddle.png");
 		background-repeat: repeat-y;
 	  	background-position: center;
 		background-attachment: scroll;
 		border: none;
-		}
 	header {
 		position: relative;
 		float: none;
@@ -167,6 +167,11 @@ footer {
 		width: auto;
 		height: auto;
 		border: none;
+		background-size: 95%;
+		background-image: url("{{ site.baseurl }}/assets/img/largescrolltop.png");
+		background-repeat: no-repeat;
+	  	background-position: center;
+		background-attachment: scroll;
 		}
 	section {
 		position: relative;
@@ -177,6 +182,11 @@ footer {
 		width: auto;
 		height: auto;
 		border: none;
+		background-size: 95%;
+		background-image: url("{{ site.baseurl }}/assets/img/largescrollbottom.png");
+		background-repeat: no-repeat;
+	  	background-position: center;
+		background-attachment: scroll;
 		}
 	.content {
 		position: relative;
